{
    "name": "KaminagaControls",
    "maps": [
        {
            "name": "KeyMouse",
            "id": "de96ed13-8d8b-48cf-83ca-7b3cb6823186",
            "actions": [
                {
                    "name": "WalkForward",
                    "type": "Button",
                    "id": "2e84f1d6-9079-4cf3-a7d9-fa6fae8cb118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkBackward",
                    "type": "Button",
                    "id": "95040241-7da6-4a92-a7ec-1c7a42805a33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "6c207454-1c8d-4a14-a076-7df1f69ad68c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37752209-073f-4075-9f46-eea670e6f178",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "WalkForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1210f78a-1d97-4a37-8efc-5ffa9cfff2fb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "WalkBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23efe235-b9bb-4ac1-886c-0cb307937d34",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "id": "d381373d-b50b-4420-8a8b-517d4aeacc00",
            "actions": [
                {
                    "name": "WalkForward",
                    "type": "Value",
                    "id": "9b703e51-3b66-4c87-8687-c8100e4da524",
                    "expectedControlType": "Axis",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WalkBackward",
                    "type": "Value",
                    "id": "1ad9a27a-b5da-41c2-9c09-6a987feded60",
                    "expectedControlType": "Axis",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "5a6509e8-520a-475d-b3e9-78a7d1c4fc9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32164e93-efc3-4029-98bd-23b1322871d1",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a46fc1-f7b2-4678-884e-059cb893adfc",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41d5e859-7ed1-437d-8abe-c8994dc47b21",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}